# animal-game

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/AnimalGame/: __main__.py  animal-game.yml  config.toml  game_controller.py  gameinit.py  gamestructure.py
src/AnimalGame/farm/: animals.py
src/AnimalGame/ui/: animal_widget.py  cli.py  feeding_popup.py  gui.py
src/AnimalGame/wild/: animals.py
tests/: test_cow.py  test_wolf.py
